hphp/hack/test/typecheck/is_expression/vec.php.exp
ERROR: File "vec.php", line 4, characters 13-15:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "hackarray.hhi", line 52, characters 24-26:
  Definition is here
ERROR: File "vec.php", line 6, characters 17-18:
Invalid argument (Typing[4110])
  File "vec.php", line 25, characters 26-31:
  Expected `string`
  File "vec.php", line 4, characters 7-15:
  But got `mixed` from this `is` expression test
ERROR: File "vec.php", line 13, characters 17-18:
Invalid argument (Typing[4110])
  File "vec.php", line 25, characters 26-31:
  Expected `string`
  File "vec.php", line 11, characters 7-18:
  But got `mixed` from this `is` expression test
